--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Conway's Game of Life</title>
+    <title>Coincidences of Life</title>
     <meta charset="utf-8">
     <!---FONT--->
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
@@ -34,7 +34,7 @@
 <body>
     <script src="index.js"></script>
     <div id="help-dir" class="bottom-div">
-        <p> Connections are fleeting. Only those which are shared  or noticed become stories, moments, and coincidences. Most connections that exist between two people or two moments are lost as we pass by eachother without a word.</p>
+        <p> Connections are fleeting. Only those which are shared or noticed become stories, moments, and coincidences. Most connections that exist between two people or two moments are lost as we pass by eachother without a word.</p>
         <p>R to restart <br>
         Spacebar to pause 
         <br>N to move forward one step</p>
